--- a/src/style.css
+++ b/src/style.css
@@ -1,27 +1,37 @@
-
+/* Reset básico */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html,
-body {
+
+html, body {
   height: 100%;
+  margin: 0;
   font-family: "Montserrat", sans-serif;
   background: #eee;
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 
 #root {
-  min-height: 100%;
+  flex: 1;
   display: flex;
   flex-direction: column;
 }
 
 
 .main-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+
+main {
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -43,18 +53,18 @@ header h1 {
 
 
 footer {
-  margin-top: auto;
   height: 2.5rem;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #2C2A41;
+  color: #ccc;
+  margin-top: auto; 
 }
 
-footer p {
-  color: #ccc;
-  margin: 0;
+footer p{
+text-align: center;
 }
 
 
@@ -68,26 +78,23 @@ form {
   box-shadow: 0 1px 5px rgb(138, 137, 137);
 }
 
-form input {
+form input, form textarea {
   width: 100%;
   border: none;
   padding: 4px;
   outline: none;
-  font-size: 1.2em;
   font-family: inherit;
-  font-weight: bolder;
   resize: none;
 }
 
+form input {
+  font-size: 1.2em;
+  font-weight: bolder;
+}
+
 form textarea {
-  width: 100%;
-  border: none;
-  padding: 4px;
-  outline: none;
   font-size: 1em;
-  font-family: inherit;
-  resize: none;
-} 
+}
 
 form button {
   text-align: center;
@@ -105,12 +112,9 @@ form button {
   outline: none;
 }
 
-form button:hover{
+form button:hover {
   background: #fcc223;
 }
-
-
-
 
 .notes-grid {
   display: grid;
@@ -121,7 +125,6 @@ form button:hover{
   width: 100%;
   box-sizing: border-box;
 }
-
 
 .note {
   background: #fff;
@@ -144,14 +147,11 @@ form button:hover{
 }
 
 .btn-delete {
-  position: relative;
   float: right;
   margin-right: 10px;
   background-color: #f7d2d2;
   border: none;
-  width: auto;
   padding: 2px;
-  height: auto;
   cursor: pointer;
   outline: none;
 }
@@ -161,14 +161,11 @@ form button:hover{
 }
 
 .btn-checked {
-  position: relative;
   float: right;
   margin-right: 10px;
   background-color: #bbffbb;
   border: none;
-  width: auto;
   padding: 2px;
-  height: auto;
   cursor: pointer;
   outline: none;
 }
@@ -177,7 +174,7 @@ form button:hover{
   background-color: #7cff7c;
 }
 
-
+/* Responsividade */
 @media (max-width: 600px) {
   form {
     width: 90%;
@@ -204,7 +201,6 @@ form button:hover{
     font-size: 0.8rem;
   }
 }
-
 
 @media (max-width: 900px) {
   .notes-grid {
